Prevent contributors' list to overflow outside of the page

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -1358,6 +1358,11 @@ button.active {
 	text-align:left;
 	font-size:80%;
 }
+
+.one-column .contributors {
+        width: 660px;
+}
+
 .contributors img{
 	width:16px;
 	height:16px;
